rholang-tree-sitter/grammar.js
        source_file: $ => repeat($._proc),

        _proc: $ => choice(
            $.par,
            $.send_sync,
            $.send_method,
            $.new,
            $.ifElse,
            $.let,
            $.bundle,
            $.match,
            $.choice,
            $.contract,
            $.agent_block,
            $.input,
            $.send,
            $.signed_term,
            $.token_stack,
            $._proc_expression
        ),

        par: $ => prec.left(0, seq($._proc, '|', $._proc)),

        new: $ => prec(1, seq(
            'new',
            field('decls', $.name_decls),
            'in',
            field('proc', $._proc))),

        let: $ => prec(2, seq(
            'let',
            field('decls', $._let_decls),
            'in',
            field('proc', $._proc))),

        match: $ => prec(2, seq(
            'match',
            field('expression', $._proc_expression),
            '{',
            field('cases',
                alias(repeat1($.case), $.cases)),
            '}'
        )),

        contract: $ => prec(2, seq(
            'contract',
            field('name', $.name),
            '(', optional(field('formals', $.names)), ')',
            '=',
            field('proc', $.block)
        )),

        // Agent block sugar (FIP 2025-08-20 Agents + 2026-01-28 Private Methods).
        // Desugars at parse time per Agents.md:19-35 to:
        //   for (r, <ctorPtrns> <= fooCtor) {
        //     new this, private in {
        //       for (...@args <= this)    { match args { /* pub  */ } } |
        //       for (...@args <= private) { match args { /* priv */ } } |  (only if private decls)
        //       Pc |
        //       r!(bundle+{*this})
        //     }
        //   }
        input: $ => prec(2, seq(
            'for', '(', field('receipts', $.receipts), ')',
            field('proc', choice($.block, $.signed_cont))
        )),

        // Greg app:concrete PSignedInput: a signed receive continuation
        // `for(...) {% SignedProc %}` (the body is a signed process, no trailing
        // `[s]` — the wrapper-with-signature `{% P %}[s]` is the OUTER signed_term).
        signed_cont: $ => prec(2, seq('{%', field('proc', $._proc), '%}')),

        send: $ => prec(3, seq(
            field('channel', $.name),
            field('send_type', $._send_type),
            field('inputs', alias($._proc_list, $.inputs))
        )),

        // ─── Cost-accounted Rholang surface ──────────────────────────────────
        // Constructs + semantics are authoritative in the mettail
        // cost-accounting worktree ({p}_s, () | s:S, g | #P | s*s, meter(K)) and
        // the cost-accounted-rho paper (sugars, joins, located purses). The
        // concrete ASCII delimiters here are a collision-safe rendering (bare
        // {P}_s collides with `block`; bare s:S with `map` key:value).

        // Signed term {P}_s (worktree `Wrap`).
        signed_term: $ => prec(2, seq(
            '{%', field('proc', $._proc), '%}',
            '[', field('sig', $.signature), ']'
        )),

        // Token stack S ::= () | s :: S  (worktree `SNil`/`SCons`; Greg app:concrete
        // `Stk`). A bare stack is DIRECTLY a signed process (no `purse(...)` wrapper);
        // located stacks are ordinary parallel composition `S1 | S2`, and ring-fencing
        // is via `new`-bound signatures (binding-sensitive Σ⟦s⟧ in the normalizer). The
        // proc-level stack is cons-headed (`s :: …`); a bare empty `()` is plain unit/Nil.
        token_stack: $ => prec.right(2, seq(
            field('head', $.stack_sig), '::', field('tail', $._stack_tail)
        )),
        _stack_tail: $ => choice($.unit, $.token_stack),
        // A token-stack layer is a fundable signature — ground / `# P` / compound —
        // but NOT a lollipop (a transfer capability is not a fundable atom; the
        // normalizer rejects `Transfer` in a stack). Excluding `-o` here also keeps
        // `-o` out of the bare-process lexer state, so `x-owed` still lexes as `x - owed`.
        stack_sig: $ => $._sig1,

        // Signatures s ::= g | # P | s1 (*) s2 | s1 -o s2  (Greg app:concrete:
        // SigGround/SigHash/SigCompound/SigTransfer). `# P` takes a high-precedence
        // principal (Proc12 — use `# { P }` to hash a complex process); compound uses
        // the distinct `(*)` lexeme (bare `*` is dereference/multiply, hence reserved);
        // `-o` is the lollipop. Precedence: ground/# tightest, (*) tighter, -o loosest.
        // Stratified per Greg's BNFC: Sig ::= Sig1 -o Sig | Sig1 ; Sig1 ::= Sig1 (*) Sig2
        // | Sig2 ; Sig2 ::= ground | # P. The lollipop `-o` lives ONLY at the top Sig
        // (reachable only inside the `[ … ]` of a signed term/bind), so it never
        // enters the bare-process lexer state — `x-owed` still lexes as `x - owed`.
        signature: $ => choice($.transfer_sig, $._sig1),
        _sig1: $ => choice($.compound_sig, $._sig2),
        _sig2: $ => choice($.ground_sig, $.hash_sig),
        ground_sig: $ => prec(20, field('name', $._proc_var)),
        hash_sig: $ => prec.right(19, seq('#', field('proc', choice($._ground_expression, $.eval)))),
        compound_sig: $ => prec.left(17, seq(
            field('left', $._sig1), '(*)', field('right', $._sig2)
        )),
        transfer_sig: $ => prec.right(16, seq(
            field('left', $._sig1), '-o', field('right', $.signature)
        )),

        _proc_expression: $ => choice(
            $._ground_expression,
            $._parenthesized,
            $.add,
            $.and,
            $.concat,
            $.conjunction,
            $.diff,
            $.disjunction,
            $.div,
            $.eq,
            $.eval,
            $.gt,
            $.gte,
            $.interpolation,
            $.lt,
            $.lte,
            $.matches,
            $.method,
            $.mod,
            $.mult,
            $.neg,
            $.negation,
            $.neq,
            $.not,
            $.or,
            $.sub,
            $.var_ref
        ),

        // expressions in precedence order

        eq: $ => prec.left(6, seq($._proc, '==', $._proc)),
        gte: $ => prec.left(7, seq($._proc, '>=', $._proc)),
        concat: $ => prec.left(8, seq($._proc, '++', $._proc)),
        add: $ => prec.left(8, seq($._proc, '+', $._proc)),
        sub: $ => prec.left(8, seq($._proc, '-', $._proc)),
        method: $ => prec(11, seq(
            field('receiver', $._proc),
            '.',
            field('name', $.var),
            field('args', alias($._proc_list, $.args)))
        ),
        eval: $ => prec(12, seq('*', $.name)),
        _ground_expression: $ => prec(16, choice($.block, $._literal, $.nil, $.collection, $._proc_var, $.simple_type, $.unit)),

        // synchronous send continuations
        name_decls: $ => commaSep1($.name_decl),
        name_decl: $ => seq($.var, optional(seq('(', field('uri', $.uri_literal), ')'))),

        // let declarations
        _let_decls: $ => choice(
            $.linear_decls,
            $.conc_decls),

        linear_decls: $ => semiSep1($._decl),
        _decl: $ => choice($.decl, $.let_var_decl),
        decl: $ => seq(field('names', $.names), '<-', field('procs', alias(commaSep1($._proc), $.procs))),
        case: $ => seq(
            field('pattern', $._proc),
            optional(seq('where', field('guard', $._proc))),
            '=>',
            field('proc', $._proc)
        ),

        // branch in select expression
        // Optional `where` guard: only commit (consume messages) if every
        // spatial pattern matches AND the guard evaluates to true.
        // Guard-false is indistinguishable from a spatial mismatch.
        receipts: $ => semiSep1($.receipt),
        receipt: $ => seq(
            conc1(choice($.linear_bind, $.repeated_bind, $.peek_bind, $.signed_bind)),
            optional(seq('where', field('guard', $._proc)))
        ),

        // Greg app:concrete SignedBind: a per-clause signed bind `{% y <- x %}[s]`
        // (Axis-C join — each rendezvous surface is funded independently). Plain
        // binds (linear_bind, etc.) remain unsigned; signed and plain binds compose
        // with `&` inside one receipt.
        signed_bind: $ => prec(2, seq(
            '{%', optional(field('names', $.names)), '<-', field('input', $._source), '%}',
            '[', field('sig', $.signature), ']'
        )),

        linear_bind: $ => seq(
            optional(field('names', $.names)),
            '<-',
            field('input', $._source)
        ),

        _source: $ => choice(
            $.simple_source,
            $.receive_send_source,
            $.send_receive_source,
            $.send_method_source),

        simple_source: $ => $.name,
        _send_type: $ => choice($.send_single, $.send_multiple),
        send_single: $ => '!',
        block: $ => seq('{', $._proc, '}'),

        bool_literal: $ => choice('true', 'false'),
        signed_int_literal: $ => token(/-?\d+i[1-9]\d*/),
        unsigned_int_literal: $ => token(/\d+u[1-9]\d*/),
        bigint_literal: $ => token(/-?\d+n/),
        bigrat_literal: $ => token(/-?\d+r/),
        float_literal: $ => token(/-?(?:\d+\.\d*|\.\d+|\d+)(?:[eE][+-]?\d+)?f(?:32|64|128|256)/),
        fixed_point_literal: $ => token(/-?(?:\d+\.\d*|\.\d+|\d+)p\d+/),
        long_literal: $ => token(/-?\d+/),
        string_literal: $ => token(/"([^"\\]|(\\[0nrt\\"])|(\\[0-9]+))*"/),
        uri_literal: $ => token(/`[^`]+`/),

        unit: $ => seq('(', ')'),

        nil: $ => 'Nil',

        // Collections
        collection: $ => choice($.list, $.tuple, $.set, $.map, $.pathmap),

        list: $ => seq('[', commaSep($._proc), optional($._proc_remainder), ']'),

        tuple: $ => choice(
            seq('(', $._proc, ',)'),
            seq('(', commaSep1($._proc), ')')
        ),

        _proc_remainder: $ => seq('...', field('remainder', $._proc_var)),

        // process lists
        _proc_list: $ => seq('(', commaSep($._proc), ')'),

        // process variables and names
        _proc_var: $ => choice($.wildcard, $.var),
        quote: $ => prec(12, seq('@', $._proc)),
        var: $ => token(/[a-zA-Z]([a-zA-Z0-9_'])*|_([a-zA-Z0-9_'])+/),

        names: $ => choice(seq(commaSep1($.name), optional($._name_remainder)), $._name_remainder),
        _name_remainder: $ => seq('...', '@', field('cont', $._proc_var)),

        // comments
