rholang-tree-sitter/test/corpus/ground.txt
===============
Ground literals
===============

`http://example.com`
true
"Hello, Rholang!"
42
52i64
65535u16
123n
456r
-1.234e5f32
10p1
.75p2

---

(source_file
  (uri_literal)
  (bool_literal)
  (string_literal)
  (long_literal)
  (signed_int_literal)
  (unsigned_int_literal)
  (bigint_literal)
  (bigrat_literal)
  (float_literal)
  (fixed_point_literal)
  (fixed_point_literal))
